@@ -15,8 +15,8 @@ approximately, so we suggest that you use rationals using
 \ccc{Quotient<MP_Float>} when you need exact divisions.
 
 Note on the implementation : although the mantissa length is basically only
-limited by the available memory, the exponent is currently represented by an
-\ccc{int}, which can overflow in some circumstances.  We plan to also have
+limited by the available memory, the exponent is currently represented by a
+\ccc{double}, which can overflow in some circumstances.  We plan to also have
 a multiprecision exponent to fix this issue.
 
 \ccInclude{CGAL/MP_Float.h}
