@@ -1,4 +1,4 @@
-// Copyright (c) 2001,2002,2003  Utrecht University (The Netherlands),
+// Copyright (c) 2001-2004  Utrecht University (The Netherlands),
 // ETH Zurich (Switzerland), Freie Universitaet Berlin (Germany),
 // INRIA Sophia-Antipolis (France), Martin-Luther-University Halle-Wittenberg
 // (Germany), Max-Planck-Institute Saarbruecken (Germany), RISC Linz (Austria),
@@ -28,6 +28,8 @@
 CGAL_BEGIN_NAMESPACE
 
 using std::pair;
+
+typedef MP_Float::exponent_type       exponent_type;
 
 const unsigned        log_limb         = 8 * sizeof(MP_Float::limb);
 const MP_Float::limb2 base             = 1 << log_limb;
@@ -101,8 +103,8 @@ compare (const MP_Float & a, const MP_Float & b)
   if (b.is_zero())
     return (Comparison_result) a.sign();
 
-  for (int i = std::max(a.max_exp(), b.max_exp()) - 1;
-          i >= std::min(a.min_exp(), b.min_exp()); i--)
+  for (exponent_type i = std::max(a.max_exp(), b.max_exp()) - 1;
+                    i >= std::min(a.min_exp(), b.min_exp()); i--)
   {
     if (a.of_exp(i) > b.of_exp(i))
       return LARGER;
@@ -120,7 +122,7 @@ Add_Sub(const MP_Float &a, const MP_Float &b, const BinOp &op)
 {
   CGAL_assertion(!b.is_zero());
 
-  int min_exp, max_exp;
+  exponent_type min_exp, max_exp;
 
   if (a.is_zero()) {
     min_exp = b.min_exp();
@@ -133,7 +135,7 @@ Add_Sub(const MP_Float &a, const MP_Float &b, const BinOp &op)
 
   MP_Float r;
   r.exp = min_exp;
-  r.v.resize(max_exp - min_exp + 1); // One more for the carry.
+  r.v.resize(static_cast<int>(max_exp - min_exp + 1)); // One more for carry.
   r.v[0] = 0;
   for(int i = 0; i < max_exp - min_exp; i++)
   {
@@ -176,6 +178,8 @@ operator*(const MP_Float &a, const MP_Float &b)
 
   MP_Float r;
   r.exp = a.exp + b.exp;
+  CGAL_assertion_msg(CGAL::abs(r.exp) < (1<<30)*1.0*(1<<23),
+                     "Exponent overflow in MP_Float multiplication");
   r.v.assign(a.v.size() + b.v.size(), 0);
   for(unsigned i = 0; i < a.v.size(); ++i)
   {
@@ -288,19 +292,19 @@ to_double_exp(const MP_Float &b)
   if (b.is_zero())
     return std::make_pair(0.0, 0);
 
-  int exp = b.max_exp();
+  exponent_type exp = b.max_exp();
   int steps = std::min(limbs_per_double, b.v.size());
-  double d_exp_1 = CGAL_CLIB_STD::ldexp(1.0, - (int) log_limb);
+  double d_exp_1 = CGAL_CLIB_STD::ldexp(1.0, - static_cast<int>(log_limb));
   double d_exp   = 1.0;
   double d = 0;
 
-  for (int i = exp - 1; i > exp - 1 - steps; i--) {
+  for (exponent_type i = exp - 1; i > exp - 1 - steps; i--) {
     d_exp *= d_exp_1;
     d += d_exp * b.of_exp(i);
   }
 
-  // the (int) cast is necessary for SunPro 5.3...
-  return std::make_pair(d, (int) (exp * log_limb));
+  // The cast is necessary for SunPro.
+  return std::make_pair(d, static_cast<int>(exp * log_limb));
 }
 
 // Returns (first * 2^second), an interval surrounding b.
@@ -311,7 +315,7 @@ to_interval_exp(const MP_Float &b)
   if (b.is_zero())
     return std::make_pair(pair<double, double>(0, 0), 0);
 
-  int exp = b.max_exp();
+  exponent_type exp = b.max_exp();
   int steps = std::min(limbs_per_double, b.v.size());
   double d_exp_1 = CGAL_CLIB_STD::ldexp(1.0, - (int) log_limb);
   double d_exp   = 1.0;
@@ -319,7 +323,7 @@ to_interval_exp(const MP_Float &b)
   Protect_FPU_rounding<true> P;
   Interval_nt_advanced d = 0;
 
-  int i;
+  exponent_type i;
   for (i = exp - 1; i > exp - 1 - steps; i--) {
     d_exp *= d_exp_1;
     if (d_exp == 0) // Take care of underflow.
@@ -343,7 +347,7 @@ to_interval_exp(const MP_Float &b)
     CGAL_assertion(MP_Float(d.inf()) <= b && MP_Float(d.sup()) >= b);
 #endif
 
-  return std::make_pair(d.pair(), (int) (exp * log_limb));
+  return std::make_pair(d.pair(), static_cast<int>(exp * log_limb));
 }
 
 }
@@ -400,7 +404,7 @@ print (std::ostream & os, const MP_Float &b)
     return os << 0 << " [ double approx == " << 0.0 << " ]";
 
   MP_Float::const_iterator i;
-  int exp = b.min_exp() * log_limb;
+  exponent_type exp = b.min_exp() * log_limb;
   double approx = 0; // only for giving an idea.
 
   for (i = b.v.begin(); i != b.v.end(); i++)
@@ -410,7 +414,8 @@ print (std::ostream & os, const MP_Float &b)
     if (exp != 0)
       os << " * 2^" << exp;
 
-    approx += CGAL_CLIB_STD::ldexp(double(*i), exp);
+    approx += CGAL_CLIB_STD::ldexp(static_cast<double>(*i),
+                                   static_cast<int>(exp));
 
     exp += log_limb;
   }
